2009-10-16  Javier Jardón Cabezas <javierjc1982@gmail.com>

	Reviewed by: Jose Dapena Paz  <jdapena@igalia.com>

	* libtinymail-camel/camel-lite/camel/camel-tcp-stream.h,
	libtinymail-camel/camel-lite/libedataserver/e-data-server-util.h,
	libtinymail-maemo/tny-maemo-conic-dummy-device.c,
	libtinymailui-gtk/tny-gtk-header-list-model.h,
	tests/functional/account-refresh.c: use single GTK and Glib
	includes

	Fix "format not a string literal and no format arguments"
	message warnings

	* libtinymail-camel/tny-camel-common.c
	* libtinymail-camel/tny-camel-mime-part.c
	* libtinymail-gnome-desktop/tny-gnome-account-store.c
	* libtinymail/tny-folder-store-query.c
	* tests/c-demo/tny-demoui-summary-view.c

2009-10-16  Sergio Villar Senin  <svillar@igalia.com>

	* libtinymail-camel/tny-camel-store-account.c
	(tny_camel_store_account_get_folders_default): reference the
	CamelStore before unrefing the old one

2009-10-15  Jose Dapena Paz  <jdapena@igalia.com>

	* Drop from repository generated files config.h.in,
	libtinymail-camel/camel-lite/config.h.in and po/Makefile.in.in

	* Reimplemented gnome keyring password dialog to use
	just plain gtk and drop usage of GnomePasswordDialog
	which is deprecated (fix #590753).

	* Removed pending includes and dependencies on
	libgnomeui (in configure.ac too) (fix #590753).

	* libtinymailui-gnome-keyring/tny-gnome-keyring-password-getter.c:
	don't access directly content area if we use G_SEAL enabled gtk

	* libtinymail-camel/camel-lite/configure.ac: add also support
	for silent rules in automake 1.11

2009-10-15 Javier Jardón Cabezas <javierjc1982@gmail.com>

	Reviewed by: Jose Dapena Paz  <jdapena@igalia.com>

	* configure.ac: Support silent build rules, requires at least automake-1.11.
	Disable by either passing --disable-silent-rules to configure or
	passing V=1 to make.

	* Implementation of TnyStream based in GIO

	* Use GIO based streams instead of vfs based streams
	in tinymail GTK.
