@@ -215,7 +215,9 @@ spool_summary_sync_full(CamelMboxSummary *cls, gboolean expunge, CamelFolderChan
 				      ((CamelLocalSummary *)cls)->folder_path,
 				      g_strerror (errno));
 		/* incase we ran out of room, remove any trailing space first */
-		ftruncate(fd, spoollen);
+		if (ftruncate(fd, spoollen) == -1) {
+			g_warning ("Couldn't truncate");
+		}
 		goto error;
 	}
 
