@@ -19,6 +19,7 @@
 
 #include <tny-camel-html-to-text-stream.h>
 #include "tny-camel-stream-priv.h"
+#include <tny-stream-camel.h>
 
 
 #include <camel/camel.h>
@@ -43,10 +44,10 @@ tny_camel_html_to_text_stream_new (TnyStream *html_stream)
 
 	wrap_html_stream = tny_stream_camel_new (html_stream);
 
-	mime_filter = camel_mime_filter_html_new ();
+	mime_filter = (CamelMimeFilter *) camel_mime_filter_html_new ();
 
-	priv->stream = camel_stream_filter_new_with_stream (wrap_html_stream);
-	camel_stream_filter_add (priv->stream, mime_filter);
+	priv->stream = (CamelStream *) camel_stream_filter_new_with_stream (wrap_html_stream);
+	camel_stream_filter_add ((CamelStreamFilter *) priv->stream, mime_filter);
 
 	camel_object_unref (mime_filter);
 	camel_object_unref (wrap_html_stream);
