@@ -1,3 +1,7 @@
+2009-10-16  Jose Dapena Paz  <jdapena@igalia.com>
+
+	* Many build warning fixes.
+
 2009-10-16  Javier Jardón Cabezas <javierjc1982@gmail.com>
 
 	Reviewed by: Jose Dapena Paz  <jdapena@igalia.com>
